<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Ushahidi</string>
    <string name="add_incident">Add Report</string>
    <string name="view_incident">View Reports</string>
    <string name="incident_details">Report Detail</string>
    <string name="app_settings">Settings </string>
    <string name="ushahidi_about">About </string>
    <string name="ushahidi_sync">Synchronize </string>
    <string name="ushahidi_splash_screen">Splash Screen</string>
    <string name="prompt_mesg">Choose A Category to Filter</string>
    <string name="btn_country">Default location</string>
    <string name="btn_confirm">Save</string>
    <string name="str_post_photos">Add a Photo</string>
    <string name="add_categories">Choose Categories</string>
    <string name="alert_dialog_error_title">Oops</string>
    <string name="invalid_email_address">An invalid email address was entered</string>
    <string name="invalid_ushahidi_instance">Looks like the URL entered is not an Ushahidi deployment.</string>
    <string name="btn_save">Save</string>
    <string name="btn_find">Find me</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_ok">OK</string>
    <string name="btn_add_photo">Add Photo</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_send">Send</string>
    <string name="incident_datetime">Date and Time:</string>
    <string name="incident_date">Change the date</string>
    <string name="incident_verified">Verified</string>
    <string name="incident_unverified">Unverified</string>
    <string name="incident_location">Location:</string>
    <string name="incident_latitude">Latitude</string>
    <string name="incident_longitude">Longitude</string>
    <string name="add_location">Add a location</string>
    <string name="view_map">Map</string>
    <string name="incident_description">Description:</string>
    <string name="incident_time">Change the time</string>
    <string name="incident_title">Title:</string>
    <string name="incident_category">Category:</string>
    <string name="incident_add_category">Select Category</string>
    <string name="incident_menu_add">Add Report</string>
    <string name="incident_list">View Reports</string>
    <string name="incident_photos">Photos:</string>
    <string name="menu_home">Home</string>
    <string name="menu_sync">Sync</string>
    <string name="instructions">Tap your location on the map</string>
    <string name="menu_settings">Settings</string>
    <string name="basic_settings">Basic settings</string>
    <string name="advanced_settings">Advanced settings</string>
    <string name="hint_advanced_settings">For more advanced settings</string>
    <string name="txt_clear_cache">Clear cache</string>
    <string name="txt_confirm_clear_cache">Are you sure you want to clear the cache?</string>
    <string name="hint_clear_cache">Clear all stored data.</string>
    <string name="option_location">Default folder</string>
    <string name="hint_option_location">The location where you want to store items saved from the selected deployment.</string>
    <string name="hint_SD_save_path">Type a folder name</string>
    <string name="bg_notification">Background Notifications</string>
    <string name="vibrate">Vibrate</string>
    <string name="hint_vibrate">Will cause phone to vibrate</string>
    <string name="ringtone">Ringtone</string>
    <string name="hint_ringtone">Play a ringtone</string>
    <string name="select_ringtone">Select Ringtone</string>
    <string name="hint_select_ringtone">Change which ringtone to use</string>
    <string name="flash_led">Flashing LED</string>
    <string name="hint_flash_led">Cause phone\'s LED to flash</string>
    <string name="hint_domain">Select the Ushahidi deployment that you wish to
		interact with.</string>
    <string name="chk_auto_fetch">Auto sync</string>
    <string name="hint_auto_fetch">Ushahidi will automatically download new reports.</string>
    <string name="txt_auto_update_delay">Auto sync frequency</string>
    <string name="hint_auto_update_delay">Set how often Ushahidi syncronizes with the
		selected deployment.</string>
    <string name="txt_path_SD">Path on SD:</string>
    <string name="txt_cache">Cache files:</string>
    <string name="txt_countries">Select a default country</string>
    <string name="txt_domain">Choose your website</string>
    <string name="txt_first_name">First name</string>
    <string name="hint_first_name">For attribution when submitting a report
		(optional).</string>
    <string name="txt_last_name">Last name</string>
    <string name="hint_last_name">Also for attribution when submitting a report
		(optional).</string>
    <string name="txt_email">E-mail address</string>
    <string name="hint_email">For contact purposes only.</string>
    <string name="txt_phonenumber">Mobile phone number</string>
    <string name="hint_phonenumber">For send report only.</string>
    <string name="total_reports">Number of reports</string>
    <string name="hint_total_reports">The total number of reports to fetch from
		the
		selected deployment.</string>
    <string name="no_reports">There are no reports to be shown</string>
    <string name="incident_menu_map">View Map</string>
    <string name="incident_menu_refresh">Refresh</string>
    <string name="reports">Reports</string>
    <string name="menu_about">About</string>
    <string name="ushahidi_url">ushahidi.com</string>
    <string name="internet_connection">Network error, please ensure you are connected to
		the Internet</string>
    <string name="preferences_notifications">Notifications</string>
    <string name="report_successfully_added_online">Report successfully posted online and entered into
		a moderation queue</string>
    <string name="report_successfully_added_offline">Report sent to local storage due to
		unavailability
		of Internet. Remember to sync to the online
		instance when there there
		is Internet connection.</string>
    <string name="failed_to_add_report_offline">Failed to send report.Check to see if you filled
		all  fields.</string>
    <string name="failed_to_add_report_online">Connection failure, cannot submit your report.
        Probably you are on a very slow connection or the server is down or very slow at the moment.</string>
    <string name="failed_to_add_report_online_db_error">Check your Ushahidi deployment. The API might be down due to a database error or something went wrong with the Api call.</string>
    <string name="empty_report_title">Enter a title for the report.</string>
    <string name="empty_report_description">Enter a description for the report.</string>
    <string name="empty_report_location">The location name field is .</string>
    <string name="empty_report_categories">Select at least one category.</string>
    <string name="hint_location">Enter location</string>
    <string name="could_not_fetch_reports">Could not fetch reports.</string>
    <string name="no_categories">Could not fetch categories.</string>
    <string name="reports_successfully_fetched">Reports successfully fetched.</string>
    <string name="find_location">Finding you&#8230;</string>
    <string name="location_disabled">Location Detection Disabled</string>
    <string name="location_reenable">Would you like to visit Location &amp; Security settings to re-enable location detection?</string>
    <string name="location_not_found">A location can not currently be determined. Enable
		more location sources i.e. GPS Satellites in Security and Location
		Settings.</string>
    <string name="loc_not_found">Your location could not be determined. Make sure
		you have pin point the exact location on the map.</string>
    <string name="version">v1.1</string>
    <string name="report_title">Title</string>
    <string name="report_verified">Verified</string>
    <string name="report_unverified">Unverified</string>
    <string name="report_desc">Description</string>
    <string name="report_category">Category</string>
    <string name="report_date">Date</string>
    <string name="report_location">Location</string>
    <string name="report_photo">Photo</string>
    <string name="status_no">No</string>
    <string name="status_yes">Yes</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="fetching_new_reports">Fetching new reports</string>
    <string name="choose_method">Choose Method</string>
    <string name="how_to_select_pic">Please choose how you would like to get the
		picture.</string>
    <string name="camera_option">Camera</string>
    <string name="gallery_option">Gallery</string>
    <string name="network_error">Network Error</string>
    <string name="network_error_msg">Network Error, please ensure you are connected to
		the Internet</string>
    <string name="file_system_error">File System Error</string>
    <string name="file_system_error_msg">File System Error, please ensure your save path is
		correct!</string>
    <string name="read_more">Read more&#8230;</string>
    <string name="tab_item_report_list">List</string>
    <string name="tab_item_report_map">Map</string>
    <string name="tab_item_checkin">Check Ins</string>
    <string name="checkin_btn">Check In</string>
    <string name="checkin_message">Message</string>
    <string name="checkin_enter_msg_hint">Enter message</string>
    <string name="checkin_how_to_select_pic">Please choose how you would like to get the
		picture.</string>
    <string name="checkin_list">View Check In</string>
    <string name="checkin_select_pic_file">File</string>
    <string name="checkin_selected_photo">Selected photo</string>
    <string name="view_checkins">View Check Ins</string>
    <string name="checkin_progress_title">Working</string>
    <string name="checkin_in_progress">Sending Check-in&#8230;</string>
    <string name="checkin_progress_message">Getting location data&#8230;</string>
    <string name="checkin_contact">Contact Info</string>
    <string name="checkin_success_toast">Check in successful</string>
    <string name="checkin_error_toast">Error encountered during check in</string>
    <string name="checkin_empty_message">Please enter a check in message.</string>
    <string name="checkin_no_location">Could not get your location. If you are using the
		GPS feature of the phone make sure the phone can see the sky. If the
		phone cannot see the sky, turn off the GPS to make use of your network
		providers cell towers for location.</string>
    <string name="could_not_fetch_checkin">Could not fetch check ins.</string>
    <string name="checkins_successfully_fetched">Checkins successfully fetched.</string>
    <string name="checkin_enter_firstname_hint">Enter first name</string>
    <string name="checkin_enter_lastname_hint">Enter last name</string>
    <string name="checkin_enter_email_hint">Enter email</string>
    <string name="checkin_photo">Photo</string>
    <string name="no_name">No name</string>
    <string name="curr_location">Current location</string>
    <string name="notification_status_bar_message">Report Sent</string>
    <string name="notification_expanded_title">Ushahidi Report</string>
    <string name="notification_expanded_message">Reports Sent Successfully</string>
    <string name="change_photo">Change Photo</string>
    <string name="search_label">Deployments </string>
    <string name="search_hint">Type here to filter the list below&#8230;</string>
    <string name="menu_refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="about">About </string>
    <string name="add_report">Add Report</string>
    <string name="admin">Admin</string>
    <string name="categories">Categories</string>
    <string name="add_checkin">Add Checkin</string>
    <string name="add_map_by_url">Add Map By URL</string>
    <string name="find_maps_around_me">Find Maps Around Me</string>
    <string name="add_map">Add Map</string>
    <string name="clear_all_map">Clear All Map</string>
</resources>