<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (c) 2010 Ushahidi Inc All rights reserved Contact: team@ushahidi.com 
    Website: http://www.ushahidi.com GNU Lesser General Public License Usage 
    This file may be used under the terms of the GNU Lesser General Public License 
    version 3 as published by the Free Software Foundation and appearing in the 
    file LICENSE.LGPL included in the packaging of this file. Please review the 
    following information to ensure the GNU Lesser General Public License version 
    3 requirements will be met: http://www.gnu.org/licenses/lgpl.html. If you 
    have questions regarding the use of this file, please contact Ushahidi developers 
    at team@ushahidi.com.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/add"
        android:icon="@drawable/add"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/add_map">
        <menu>
            <item
                android:id="@+id/menu_add"
                android:showAsAction="ifRoom"
                android:title="@string/add_map_by_url"/>
            <item
                android:id="@+id/menu_find"
                android:showAsAction="ifRoom"
                android:title="@string/find_maps_around_me"/>
        </menu>
    </item>
    <item
        android:id="@+id/clear_map"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:icon="@drawable/discard"
        android:title="@string/clear_all_map"/>
    <item
        android:id="@+id/app_settings"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:icon="@drawable/settings"
        android:title="@string/settings"/>
    <item
        android:id="@+id/app_about"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:icon="@drawable/about"
        android:title="@string/about"/>

</menu>