<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2010 Ushahidi Inc All rights reserved Contact: team@ushahidi.com 
	Website: http://www.ushahidi.com GNU Lesser General Public License Usage 
	This file may be used under the terms of the GNU Lesser General Public License 
	version 3 as published by the Free Software Foundation and appearing in the 
	file LICENSE.LGPL included in the packaging of this file. Please review the 
	following information to ensure the GNU Lesser General Public License version 
	3 requirements will be met: http://www.gnu.org/licenses/lgpl.html. If you 
	have questions regarding the use of this file, please contact Ushahidi developers 
	at team@ushahidi.com. -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/db1_root" android:orientation="vertical"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout style="@style/ActionBarTitleContainer">
		<ImageButton style="@style/ActionBarTitle" android:contentDescription="@string/menu_home" />
        <TextView style="@style/ActionBarTitleText" />
		<ImageView style="@style/ActionBarTitleSeparator" />
		<ImageButton style="@style/ActionBarTitle" android:id="@+id/refresh_report_btn"
			android:src="@drawable/button_refresh" android:onClick="onRefreshReports" />
        <ProgressBar style="@style/TitleBarProgressIndicator"
            android:id="@+id/title_refresh_progress" android:visibility="gone" />
        <ImageView style="@style/ActionBarTitleSeparator" />
		<ImageButton style="@style/ActionBarTitle" android:id="@+id/add_btn"
			android:src="@drawable/button_add" android:onClick="onAddReport" />
	</LinearLayout>
	<ImageView style="@style/ActionBarSeparator" />
	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_weight="1" android:background="@drawable/dashboard_background">
		<!-- First Grid -->
		<LinearLayout android:orientation="horizontal"
			android:layout_weight="10" android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<Button android:id="@+id/checkin_list_btn" style="@style/DashboardButton"
				android:text="@string/checkin_list" android:drawableTop="@drawable/dashboard_checkin" />

			<!-- List button -->
			<Button android:id="@+id/incident_list" style="@style/DashboardButton"
				android:text="@string/incident_list" android:drawableTop="@drawable/dashboard_list" />

			<Button android:id="@+id/incident_add" style="@style/DashboardButton"
				android:visibility="gone" android:text="@string/incident_menu_add"
				android:drawableTop="@drawable/dashboard_add" />

			<!-- Checkin button -->
			<Button android:id="@+id/checkin_add_btn" style="@style/DashboardButton"
				android:visibility="gone" android:text="@string/checkin_btn"
				android:drawableTop="@drawable/dashboard_add_checkin" />
		</LinearLayout>

		<!-- Middle Grid -->
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1"
			android:id="@+id/middle_grid" >
			<Button android:id="@+id/incident_map" style="@style/DashboardButton"
				android:text="@string/incident_menu_map" android:drawableTop="@drawable/dashboard_map" />
			<Button android:id="@+id/deployment_search" style="@style/DashboardButton"
				android:onClick="onClickFeature" android:text="@string/search_label"
				android:drawableTop="@drawable/dashboard_search" />
		</LinearLayout>

		<!-- Last Grid -->
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="15">
			<Button android:id="@+id/deployment_about" style="@style/DashboardButton"
				android:onClick="onClickFeature" android:text="@string/menu_about"

				android:drawableTop="@drawable/dashboard_about" />
			<Button android:id="@+id/deployment_settings" style="@style/DashboardButton"
				android:onClick="onClickFeature" android:text="@string/menu_settings"
				android:drawableTop="@drawable/dashboard_settings" />
		</LinearLayout>
	</LinearLayout>
</LinearLayout>  