<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2010 Ushahidi Inc All rights reserved Contact: team@ushahidi.com 
	Website: http://www.ushahidi.com GNU Lesser General Public License Usage 
	This file may be used under the terms of the GNU Lesser General Public License 
	version 3 as published by the Free Software Foundation and appearing in the 
	file LICENSE.LGPL included in the packaging of this file. Please review the 
	following information to ensure the GNU Lesser General Public License version 
	3 requirements will be met: http://www.gnu.org/licenses/lgpl.html. If you 
	have questions regarding the use of this file, please contact Ushahidi developers 
	at team@ushahidi.com. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="@color/background_color">
	<LinearLayout style="@style/ActionBarTitleContainer">
		<ImageButton style="@style/ActionBarTitle"
			android:contentDescription="@string/menu_home"
			android:onClick="onClickHome" />

		<ImageView style="@style/ActionBarTitleSeparator" />
		<TextView style="@style/ActionBarTitleText" />
		<ImageButton style="@style/ActionBarTitle" android:id="@+id/search_report_btn"
			android:src="@drawable/button_search" android:onClick="onSearchDeployments"
			android:visibility="gone" />
		<Button style="@style/ActionbarActionButton" android:id="@+id/incident_add_btn"
			android:text="@string/btn_send" />
	</LinearLayout>
	<ImageView style="@style/ActionBarSeparator" />
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<!-- Parent layout starts -->
		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:orientation="vertical"
			android:padding="10dip">
			<!-- Title layout begins -->
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingBottom="10px">

				<TextView android:id="@+id/lbl_title" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:textColor="@color/title_color"
					android:textStyle="bold" android:text="@string/incident_title" />

				<EditText android:id="@+id/incident_title"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:capitalize="words" android:autoText="true" />

			</LinearLayout>
			<!-- Title layout ends. -->

			<!-- Date layout starts. -->
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingBottom="10px">

                <TextView android:id="@+id/lbl_date" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textStyle="bold"
					android:textColor="@color/title_color" android:text="@string/incident_datetime" />
				<LinearLayout android:orientation="horizontal"
					android:layout_width="fill_parent" android:layout_height="wrap_content">
					<Button android:id="@+id/pick_date" android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:textStyle="bold" android:layout_weight="1"
						android:text="@string/incident_date" />

					<Button android:id="@+id/pick_time" android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:textStyle="bold" android:layout_weight="1"
						android:text="@string/incident_time" />
				</LinearLayout>
			</LinearLayout>
			<!-- Date layout ends. -->

			<!-- Location layout starts. -->
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingBottom="10px">

				<TextView android:id="@+id/incident_loc"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:textStyle="bold" android:textColor="@color/title_color"
					android:text="@string/incident_location" />

				<!-- location name -->
				<EditText android:id="@+id/incident_location"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:hint="@string/hint_location" android:capitalize="words" android:inputType="textCapWords"
					android:autoText="true" />

				<com.google.android.maps.MapView
					android:id="@+id/location_map" android:layout_width="fill_parent"
					android:layout_height="250dip" android:apiKey="@string/google_map_api_key"
					android:enabled="true" android:clickable="true" />

                <LinearLayout android:orientation="horizontal"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
                    android:paddingTop="5px">
                    <EditText android:id="@+id/incident_latitude"
                        android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"
                        android:hint="@string/incident_latitude" android:inputType="numberDecimal|numberSigned" />

                    <EditText android:id="@+id/incident_longitude"
                        android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"
                        android:hint="@string/incident_longitude" android:inputType="numberDecimal|numberSigned"  />
                 </LinearLayout>
			</LinearLayout>
			<!-- Location layout ends. -->

			<!-- Categories layout starts -->
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingBottom="10px">
                <TextView android:id="@+id/lbl_date" android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:textStyle="bold"
					android:textColor="@color/title_color" android:text="@string/incident_category" />

				<Button android:id="@+id/add_category" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:textStyle="bold" android:text="@string/incident_add_category" android:layout_weight="1" />
			</LinearLayout>
			<!-- Categories layout ends. -->

			<!-- Description layout starts -->
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:paddingBottom="10px">

				<TextView android:id="@+id/lbl_incidents_dec"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textStyle="bold" android:textColor="@color/title_color"
					android:text="@string/incident_description" />

				<EditText android:id="@+id/incident_desc"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:gravity="top" android:singleLine="false" android:lines="5"
					android:autoText="true" android:scrollbars="vertical" android:inputType="textMultiLine|textCapSentences" />
			</LinearLayout>
			<!-- Description layout ends. -->

			<!-- Photo layout starts. -->
			<LinearLayout android:orientation="vertical"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingBottom="10px">

                <TextView
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:textStyle="bold" android:textColor="@color/title_color"
					android:text="@string/incident_photos" />

				<Button android:id="@+id/btnPicture" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:textStyle="bold"
					android:text="@string/btn_add_photo" />

				<ImageView android:id="@+id/sel_photo_prev"
					android:layout_height="wrap_content" android:layout_width="fill_parent"
					android:scaleType="fitCenter" />

			</LinearLayout>
			<!-- Photo layout ends. -->

		</LinearLayout>
		<!-- Parent layout ends. -->
	</ScrollView>

</LinearLayout>